# new_layered_architecture

./: .pre-commit-config.yaml  READE.md  pyproject.toml  script.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 43e156c3ca5e_initial_tables.py
app/: main.py
app/src/api/: __init__.py  cart_routes.py  menu_routes.py  order_routes.py  report_routes.py  user_routes.py
app/src/containers/: container.py
app/src/core/: __init__.py  auth_dependency.py  config.py  database.py  jwt_auth.py
app/src/middleware/: auth.py
app/src/models/: __init__.py  cart_models.py  menu_models.py  order_models.py  user_models.py
app/src/repository/: __init__.py  cart_repository.py  menu_repository.py  order_repository.py  user_repository.py
app/src/schemas/: auth_schema.py  cart_schema.py  menu_schema.py  order_shema.py  report_schema.py  user_schema.py
app/src/services/: __init__.py  cart_service.py  email_service.py  menu_service.py  notification_service.py  order_service.py  report_service.py  user_service.py
app/src/utils/: exceptions.py  singleton.py
