[tool.poetry]
name = "layered-architecture"
version = "0.1.0"
description = ""
authors = ["Vladyslav Levkovich <levkovich.vlad.2004@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
beanie = ">=2.0.0,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
apscheduler = ">=3.11.0,<4.0.0"
alembic = ">=1.16.4,<2.0.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = ">=1.2.3,<2.0.0"
black = "25.1.0"
mypy = ">=1.17.1,<2.0.0"
isort = {extras = ["colors"], version = "^6.0.1"}
types-setuptools = "^69.0.0"
types-requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.0.0"}  # Ensure pydantic types are available
dependency-injector = "^4.41.0"  # Add explicit version if using DI


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
force_sort_within_sections = true

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


known_first_party = [
    "app.src.core",
    "app.src.services",
    "app.src.api",
    "app.src.models",
    "app.src.repository",
    "app.src.containers",
    "app.src.middleware",
    "app.src.utils"
]
default_section = "THIRDPARTY"

skip = ["venv", ".venv", "env", "__pycache__", ".eggs", "build", "dist", "alembic"]

color_output = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "alembic",
    "script.py",
]
per-file-ignores = [
    "__init__.py:F401",
]
show-source = true

[tool.mypy]
python_version = 3.11
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

files = ["app/"]

strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
venv/
'''
